--- a/components/ui/Pagination/index.module.css
+++ b/components/ui/Pagination/index.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   width: 36px;
   height: 36px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 .current {
   background-color: var(--color-current);
