--- a/components/Article/index.css
+++ b/components/Article/index.css
@@ -1,59 +1,3 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.title {
-  font-size: 2.4rem;
-  margin-bottom: 24px;
-  text-align: center;
-}
-
-.description {
-  font-size: 0.9rem;
-  color: var(--color-text-sub);
-  margin: 24px 40px;
-  text-align: center;
-}
-
-.meta {
-  display: flex;
-  align-items: center;
-  margin-bottom: 64px;
-}
-
-.writer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 40px;
-  border-right: 1px solid var(--color-border);
-  margin-right: 40px;
-}
-
-.writerIcon {
-  display: block;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-}
-
-.writerName {
-  margin-left: 16px;
-}
-
-.thumbnail {
-  width: 960px;
-  height: auto;
-  margin-bottom: 64px;
-}
-
-.content {
-  width: 720px;
-}
-
 .content *:first-child {
   margin-top: 0;
 }
@@ -143,6 +87,7 @@
   text-decoration: underline;
 }
 
+.content > figure > a > img,
 .content > figure > img {
   max-width: 100%;
   height: auto;
@@ -184,47 +129,6 @@
 }
 
 @media (max-width: 640px) {
-  .title {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-
-  .description {
-    font-size: 0.9rem;
-    color: var(--color-text-sub);
-    margin: 24px 0 40px;
-    text-align: center;
-  }
-
-  .meta {
-    display: flex;
-    align-items: center;
-    margin-bottom: 40px;
-    font-size: 0.9rem;
-  }
-
-  .writer {
-    padding-right: 24px;
-    margin-right: 24px;
-  }
-
-  .writerIcon {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-  }
-
-  .writerName {
-    margin-left: 16px;
-  }
-
-  .thumbnail {
-    width: 100%;
-    height: auto;
-    margin-bottom: 40px;
-  }
-
   .content {
     width: 100%;
   }
